@@ -1,4 +1,5 @@
 6.oct (ws)
+      - fix #7403: double note duration (W) changes pitch
       - remove unused "system" text styles
       - remove page number text styles
       - replace text style number by text style name in .msc[xz] files to
